# probotics

./: .gitignore  2024-12-02-13-06-24.bag  README.md  pyproject.toml  requirements.txt  sympy.ipynb
configs/: 1er_piso_ala_sur_alig.yaml  explore.yaml  explore_and_localize.yaml  gotoA.yaml  lidar.yaml  roomba.yaml  ros.yaml  run_in_circles.yaml  simulation.yaml
data/planning/: map.mat
notebooks/: TP1.ipynb  TP2.ipynb  TP3.ipynb  TP4.ipynb  simulator.ipynb
robot_simulator/simulador_matlab_hokuyo_2024b/: readme.txt  robot_diferencial_con_lidar.m
scripts/: challenge1.sh  ekf.sh  fastslam.sh  particle_filter.sh  planning.sh
src/playground/: base.py  robot.py  simulator.py  survaillance.py
src/probabilistic_robotics/: simulator.py  transformations.py  utils.py
src/probabilistic_robotics.ok/: transformations.py
src/probabilistic_robotics.ok/drives/: __init__.py  differential.py
src/probabilistic_robotics.ok/localization/: __init__.py  particle_filter.py
src/probabilistic_robotics.ok/mapping/: grid1d.py
src/probabilistic_robotics/localization/: bayes1d.py  kalman.py  particle_filter.py
src/probabilistic_robotics/mapping/: __init__.py  base.py
src/probabilistic_robotics/planning/: base.py  dijkstra.py
src/probabilistic_robotics/robots/: base.py  cleanodom.py  diffdrive.py  gaussiannoisyodom.py  noisyodom.py
src/probabilistic_robotics/scripts/: fastslam.py  localization_kf.py  localization_particle_filter.py  planning.py  simulator.py
src/probabilistic_robotics/sensors/: __init__.py  landmarks.py  lidar.py
src/probotics/: __init__.py  __main__.py
(+33 files in other folders)
