[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "probabilistic_robotics"
version = "0.0.1"
authors = [
  { name="Lautaro Estienne", email="lestienne@fi.uba.ar" },
  { name="Ignacio Mas", email="imas@fi.uba.ar" },
]
description = "Trabajos Prácticos de Robótica Móvil"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LautaroEst/probabilisic_robotics"
Issues = "https://github.com/LautaroEst/probabilisic_robotics/issues"